# sleepy-rework

./: .gitignore  .prettierrc.yml  README.md  TODO.md  eslint.config.js  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build-android-client.yml  build-desktop-client.yml
.yarn/patches/: core-js-npm-3.43.0-7859dbc9f9.patch  event-target-shim-npm-6.0.2-4b3d91b04f.patch
backend/: .gitignore  pyproject.toml
backend/backend/: pyproject.toml
backend/backend/sleepy_rework/: app.py  config.py  devices.py  exc_handle.py  utils.py
backend/backend/sleepy_rework/api_v1/: base.py
backend/docker/: .env.example  Dockerfile  docker-compose.yaml  fnm-setup.sh  pyproject.toml
backend/sleepy_rework/: __main__.py  app.py  config.py  deps.py  devices.py  exc_handle.py  log.py  models.py  utils.py
backend/sleepy_rework/api_v1/: __init__.py  base.py  deps.py
backend/sleepy_rework/static/: index.html
backend/types/: pyproject.toml
backend/types/sleepy_rework_types/: __init__.py  config.py  enums.py  models.py
backend/types/sleepy_rework_types/api/: __init__.py  http.py  types.py  types.pyi
client/android/: .env.example  .gitignore  app.config.ts  app.json  package.json  react-native.config.js
client/android/.yarn/patches/: @zareanmasoud-react-native-accessibility-service-npm-0.0.3-e5a419a643.patch  react-native-background-actions-npm-4.0.1-45b4c37f62.patch
client/android/__tests__/: App.test.tsx
client/android/android/: settings.gradle
client/android/android/app/: build.gradle
client/android/android/app/src/main/: AndroidManifest.xml
client/android/android/app/src/main/java/top/lgc2333/sleepy_rework/client/android/: MainActivity.kt  MainApplication.kt
client/android/android/app/src/main/res/drawable/: rn_edit_text_material.xml
client/android/android/app/src/main/res/values/: strings.xml
client/android/assets/: BootReceiver.kt
client/android/assets/keystore/: keystore.example.properties
client/android/assets/pre-build/: accessibility_service.xml
client/android/plugins/: prebuild.plugin.ts
client/android/src/: App.tsx  index.ts
client/android/src/components/: Config.tsx  MainView.tsx  Switch.tsx  TextInput.tsx
client/android/src/hooks/: useConfig.ts
client/android/src/services/: index.ts
client/android/src/stubs/: accessbility.d.ts
client/android/src/utils/: common.ts  config.ts
client/android/src/views/: Home.tsx  Settings.tsx
client/autoxjs/: babel.config.json  package.json  tsconfig.json
client/autoxjs/scripts/: post-build.mjs  tsconfig.json
client/autoxjs/src/: global.d.ts  index.ts  main.ts  polyfill.ts  websocket.ts
client/desktop/: LICENSE  main.py  pyproject.toml
client/desktop/sleepy_rework_client_desktop/: __main__.py  app.py  config.py  consts.py  single_app.py  tray.py  window.py
client/desktop/sleepy_rework_client_desktop/assets/: __init__.py
client/desktop/sleepy_rework_client_desktop/client/: base.py  info.py  main.py
client/desktop/sleepy_rework_client_desktop/components/: __init__.py  settings_card.py
client/desktop/sleepy_rework_client_desktop/utils/: common.py  single_app.py
client/desktop/sleepy_rework_client_desktop/utils/activity/: __init__.py  base.py  basic.py  windows.py
client/desktop/sleepy_rework_client_desktop/utils/auto_start/: __init__.py  base.py  linux.py  macos.py  windows.py
client/desktop/sleepy_rework_client_desktop/utils/client/: base.py  info.py
client/desktop/sleepy_rework_client_desktop/utils/info/: shared.py
client/desktop/sleepy_rework_client_desktop/views/: __init__.py  home.py  settings.py
client/desktop/sleepy_rework_client_desktop/widgets/: __init__.py  scroll_area.py
client/desktop/sleepy_rework_client_desktop/widgets/setting_card/: __init__.py  expand_group.py  line_edit.py  line_edit_list.py
scripts/: build_desktop_client.py  gen_api_type_anno.py  gen_js_api_type_anno.py  gen_openapi_spec.py  pack_client_desktop.py
stubs/: pylnk3.pyi
types-js/: tsconfig.json
types-python/: pyproject.toml
types/js/: package.json
types/js/src/: base.ts  index.ts  openapi.ts  utils.ts  ws.ts
types/kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
types/kotlin/gradle/: libs.versions.toml
types/python/: pyproject.toml
types/python/sleepy_rework_types/: __init__.py  models.py
types/python/sleepy_rework_types/api/: http.py  types.pyi
website/: .env.example  .prettierrc.yml  eslint.config.js  index.html  package.json  tsconfig.app.json  uno.config.ts
website/src/: App.vue  main.ts  style.scss
website/src/components/: DeviceCard.vue
website/src/services/: index.ts
website/src/types/: index.ts
