[project]
name = "workspace-sleepy-rework"
version = "0.1.0"
requires-python = ">=3.12"
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    # members
    "sleepy-rework",
    "sleepy-rework-types",
    "sleepy-rework-client-desktop",
    # tools
    "basedpyright>=1.29.4",
    "ruff>=0.12.0",
    "nuitka>=2.7.10",
    "imageio>=2.37.0",
    "pyinstaller>=6.14.1",
]

[tool.uv.workspace]
members = ["types/python", "backend", "client/desktop"]

[tool.uv.sources]
sleepy-rework = { workspace = true }
sleepy-rework-types = { workspace = true }
sleepy-rework-client-desktop = { workspace = true }

# tools config

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportShadowedImports = false
exclude = ["**/node_modules", "**/.venv"]
stubPath = "stubs"
executionEnvironments = [
    { root = "stubs", reportIncompatibleMethodOverride = false, reportSelfClsParameterName = false },
    { root = "." },
]

[tool.ruff]
target-version = "py312"
extend-exclude = []

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "B008",
    "B905",
    # "COM812",
    "E501",
    "F821",    # conflict with pyright
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF203",
    "PGH003",
    "PLC04",
    "PLC2701",
    "PLR09",
    "PLR1702",
    "PLR2004",
    "PLR6301",
    "PLW0603",
    "PLW1641",
    "PLW2901",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF029",
    "RUF100",
    "S101",
    "S311",
    "S404",
    "SIM117",
    "TC001",
    "TC003",
    "TRY002",
    "TRY003",
    "W505",
]
select = [
    "A",
    "ANN001",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FAST",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TC",
    "TRY",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.per-file-ignores]
"private/*" = ["INP001"]
"typings/*" = ["A002", "N801", "N818"]
"client/desktop/*" = ["N802", "N803", "N806", "N815", "N816"]

[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = true
known-first-party = [
    "sleepy_rework",
    "sleepy_rework_types",
    "sleepy_rework_client_desktop",
]
