[project]
name = "sleepy-rework"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cookit[pyd]>=0.11.6",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings[toml]>=2.9.1",
    "python-debouncer>=0.1.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.2",
]

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
