[project]
name = "sleepy-rework"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "sleepy_rework_types",
    "cookit>=0.12.0.post1",
    "fastapi>=0.115.13",
    "pydantic>=2.11.7",
    "pydantic-settings[toml]>=2.10.1",
    "python-debouncer>=0.1.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.3",
]

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "sleepy_rework/__init__.py"
