[project]
name = "sleepy-rework"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "cookit>=0.12.0.post1",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings[toml]>=2.9.1",
    "python-debouncer>=0.1.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.2",
]

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "sleepy_rework/__init__.py"
