[project]
name = "sleepy-rework-client-desktop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sleepy_rework_types",
    "nonestorage>=0.1.0",
    "pyqt-fluent-widgets[full]>=1.8.1",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2; sys_platform == 'win32'",
    "pyqt5-qt5>=5.15.2; sys_platform != 'win32'",
    "pylnk3>=0.4.3; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
