[project]
name = "sleepy-rework-client-desktop"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "sleepy_rework_types",
    "nonestorage>=0.1.0",
    "pyqt-fluent-widgets[full]>=1.8.1",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2; sys_platform == 'win32'",
    "pyqt5-qt5>=5.15.2; sys_platform != 'win32'",
    "pylnk3>=0.4.3; sys_platform == 'win32'",
    "httpx[http2,socks]>=0.28.1",
    "qasync>=0.27.1",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "sleepy_rework_client_desktop/__init__.py"
