[project]
name = "sleepy-rework-client-desktop"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "sleepy_rework_types",
    "PySide6-Fluent-Widgets[full]>=1.8.1",
    "pylnk3>=0.4.3; sys_platform == 'win32'",
    "pywin32>=310; sys_platform == 'win32'",
    "nonestorage>=0.1.0",
    "httpx[http2,socks]>=0.28.1",
    "qasync>=0.27.1",
    "websockets>=15.0.1",
    "cookit>=0.12.0.post1",
    "python-debouncer>=0.1.5",
    "psutil>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "sleepy_rework_client_desktop/__init__.py"
