[project]
name = "sleepy-rework-types"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "pydantic>=2.11.7"]

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "sleepy_rework_types/__init__.py"
